--- a/scss/blocks/_blocks-all.scss
+++ b/scss/blocks/_blocks-all.scss
@@ -4,6 +4,8 @@
 @import "logo";
 @import "nav";
 @import "main";
+@import "sidebar";
+@import "subscriptions";
 @import "intro";
 @import "features";
 @import "contact";
