change header search form

--- a/css/styles.css
+++ b/css/styles.css
@@ -414,9 +414,6 @@ img {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
 }
 
 .header__left {
@@ -426,7 +423,7 @@ img {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  margin-right: 20px;
+  margin-right: 80px;
 }
 
 .header__toggler {
@@ -453,16 +450,17 @@ img {
 }
 
 .header__search-form-input {
-  padding: 5px 12px;
+  outline: none;
+  padding: 10px 24px;
   width: 573px;
-  border: 1px solid #c0c0c0;
-  border-top-left-radius: 2px;
-  border-bottom-left-radius: 2px;
-  -webkit-box-shadow: inset 0px 0px 2px 0px #cccccc;
-          box-shadow: inset 0px 0px 2px 0px #cccccc;
+  border: none;
+  border-top-left-radius: 22px;
+  border-bottom-left-radius: 22px;
+  background-color: #EBEBEB;
 }
 
 .header__search-form-button {
+  outline: none;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -473,9 +471,10 @@ img {
       -ms-flex-align: center;
           align-items: center;
   width: 63px;
-  border-top-right-radius: 2px;
-  border-bottom-right-radius: 2px;
-  border: 1px solid #cccccc;
+  border: none;
+  border-top-right-radius: 22px;
+  border-bottom-right-radius: 22px;
+  background-color: #EBEBEB;
   border-left: none;
 }
 
@@ -491,6 +490,7 @@ img {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  margin-left: auto;
 }
 
 .header__details-video {
