--- a/css/styles.css
+++ b/css/styles.css
@@ -357,7 +357,7 @@ html {
 body {
   padding: 0;
   margin: 0;
-  font-family: "Roboto", sans-serif;
+  font-family: "Mulish", sans-serif;
   font-size: 16px;
   line-height: 1.5;
   background-color: #fff;
@@ -631,8 +631,9 @@ img {
           align-items: center;
   text-decoration: none;
   padding: 8px 25px;
-  font-size: 14px;
-  color: #030303;
+  font-size: 16px;
+  line-height: 20px;
+  color: #898989;
 }
 
 .nav__top-list-link:hover {
@@ -674,8 +675,9 @@ img {
           align-items: center;
   text-decoration: none;
   padding: 8px 25px;
-  font-size: 14px;
-  color: #030303;
+  font-size: 16px;
+  line-height: 20px;
+  color: #898989;
 }
 
 .nav__bottom-list-link:hover {
@@ -760,8 +762,9 @@ img {
 .subscriptions__link-text {
   display: inline-block;
   vertical-align: baseline;
-  font-size: 14px;
-  color: #030303;
+  font-size: 16px;
+  line-height: 20px;
+  color: #898989;
 }
 
 .footer {
