--- a/scss/_general.scss
+++ b/scss/_general.scss
@@ -12,7 +12,7 @@ html {
 body {
   padding: 0;
   margin: 0;
-  font-family: "Roboto", sans-serif;
+  font-family: "Mulish", sans-serif;
   font-size: 16px;
   line-height: 1.5;
   background-color: #fff;
