--- a/scss/blocks/_nav.scss
+++ b/scss/blocks/_nav.scss
@@ -15,8 +15,9 @@
   align-items: center;
   text-decoration: none;
   padding: 8px 25px;
-  font-size: 14px;
-  color: #030303;
+  font-size: 16px;
+  line-height: 20px;
+  color: #898989;
   &:hover {
     background-color: #f4f4f4;
   }
@@ -47,8 +48,9 @@
   align-items: center;
   text-decoration: none;
   padding: 8px 25px;
-  font-size: 14px;
-  color: #030303;
+  font-size: 16px;
+  line-height: 20px;
+  color: #898989;
   &:hover {
     background-color: #f4f4f4;
   }
