--- a/scss/blocks/_blocks-all.scss
+++ b/scss/blocks/_blocks-all.scss
@@ -6,6 +6,13 @@
 @import "main";
 @import "sidebar";
 @import "subscriptions";
+@import "pagination";
+@import "videos-section";
+@import "videos";
+@import "video";
+@import "watch-later-button";
+@import "recomended-channel";
+@import "recomended-videos";
 @import "intro";
 @import "features";
 @import "contact";
